Fix Samsung Display Overflow

--- a/client/src/template/OverlayAdd.css
+++ b/client/src/template/OverlayAdd.css
@@ -1,7 +1,7 @@
 .main-overlayAdd {
     background-color: white;
     position: fixed;
-    height: calc(100vh - 148px);
+    height: 85vh;
     bottom: 0;
     width: 100%;
     padding: 10px;
@@ -9,7 +9,7 @@
 }
 
 .main-overlayAdd h3 {
-    margin-bottom: 20px;
+    margin-bottom: 2vh;
 }
 
 .close-overlayAdd {
@@ -26,17 +26,26 @@
 .inputs-overlayAdd > * {
     display: flex;
     flex-direction: column;
-    margin-bottom: 20px;
+    margin-bottom: 2vh;
 }
 
+.inputs-overlayAdd h4 {
+    
+    width: calc(100vw - 32px);
+    margin: 0px 16px 0px;
+}
+
+
+
 .Dropdown{
-    width: 100%;
-    height: 30px;
-    border: none;
-    border-bottom: 1px solid #E9714F;
+    width: calc(100vw - 32px);
+
+    margin: 0px 16px 20px;
+    height: 4vh;
+    border-radius: 4px;
+    border: 1px solid #A2A2A2;
     padding: 5px;
     outline: none;
-    background-color: whitesmoke;
 }
 
 .real-main {
@@ -58,7 +67,7 @@
 
     width: 250px;
     color: white;
-    height: 40px;
+    height: 5vh;
     border: 0px solid;
     background-color: #E9714F;
     border-radius: 8px;
@@ -70,3 +79,9 @@
     justify-content: center;
     align-items: center;
 }
+
+
+.empty{
+    width: 100%;
+    height: 2vh;
+  }
